tests/samples/compile_errors/unreachable_code/after_exit.bas
Attribute VB_Name = "UnreachableExit"
Sub TestUnreachable()
    Exit Sub
    Debug.Print "Unreachable"
End Sub
